update packages and fix swagger header token for auth

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # -----------------------------------------------------------------------------
 # Database (PostgreSQL)
 # -----------------------------------------------------------------------------
-DATABASE_URL=postgresql://postgres:password@localhost:5432/rust_auth?schema=public
+DATABASE_URL=postgresql://postgres:passowrd@localhost:5432/crud-auth?schema=public
 
 # -----------------------------------------------------------------------------
 # JSON Web Token Credentials
